tests/golden/errors/property_no_setter.py
class C:
    @property
    def x(self) -> int:
        return 1


c = C()
c.x = 5
